src/pages/login-page/login-page.module.css
.layout {
    width: 100vw;
    height: 100vh;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    background-image: url('kalen-emsley-Bkci_8qcdvQ-unsplash.jpg');
    background-position: center;
    background-size: cover ;

    position: relative;
}

.header {
    background-color: #ccc;
}

.card {
    box-shadow: 0 0 50px 0 rgba(0, 0, 0, 1);
    width: 600px !important;
}

.message {
    margin-bottom: 10px;
}

.container {
    display: flex;
    flex-direction: row;
}

.containerDivider {
    flex: 0 0 1px;
    width: 1px;
    background-color: rgba(34, 36, 38, 0.15);
    margin-left: 14px;
    margin-right: 14px;
}

.containerItem {
    flex: 1 0 0;
}

.center {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

@media screen and (max-width: 600px) {
    .container {
        flex-direction: column;
    }
    .containerDivider {
        height: 1px;
        width: 100%;
        margin: 14px 14px;
    }
}

.attribution {
    position: absolute;
    right: 20px;
    bottom: 60px;
    color: white;
}

.attribution a {
    color: white;
    text-decoration: underline;
}

